
Revision 4.3.2, work in progress
--------------------------------

Repository `tarball download <http://pysnmp.cvs.sourceforge.net/viewvc/pysnmp/pysnmp/?view=tar>`_

- Copyright notice added to non-trivial source code files.

Revision 4.3.1, released 12-11-2015
-----------------------------------

- Added recursive resolution of ObjectIdentifier values at ObjectType
  by converting it to ObjectIdentity.
- A bunch of convenience shortcuts to rfc1902.ObjectIdentity added
  from rfc1902.ObjectType and rfc1902.NotificationType
  (.addAsn1MibSource(), .addMibSource(), .loadMibs())
- When pretty printing indices at rfc1902.ObjectType, quote only strings.
- SNMP overview and PySNMP hlapi tutorial added to documentation.
- Fix to __doc__ use in setup.py to make -O0 installation mode working.
- Fix to ObjectIdentity->ObjectIdentifier attributes handover
- Fixed crash at oneliner compatibility code on EOM response.
- Fixed crash in hlapi.transport module.
- Fixed OID resolution issues that roots at node 0 and 2.
- Fix to MIB builder to fail gracefully on corrupted MIB package encounter.
- Fix to docs distribution -- now the are Sphinx-buildable out-of-the-box.
- Source code re-linted

Revision 4.3.0, released 28-09-2015
-----------------------------------

- Critical error fixed in key localization procedure for AES192/AES256/3DES
  cyphers. Previous versions might never worked properly in this respect.
- Initial PySMI integration. Original ASN.1 MIBs could now be parsed, stored
  at a local pysnmp MIBs repository and loaded into SNMP Engine. Relevant
  example scripts added. Obsolete libsmi-based scripts removed.
- Major rewrite of native SNMPv3 CommandGenerator and NotificationOriginator
  applications towards the following goals:

  * avoid binding to specific SNMP engine instance to promote single
    SNMP app instance using many SNMP engine instances
  * support two APIs for working with request data: one operates on the