@@ -52,3 +52,9 @@ Sparse notes on major existing problems/plans
   may need a means to deal only with specific node types.
 
 * redesign proto.errind.ErrorIndication
+
+* redesign PYSNMP MIB tables to better handle optional values (keys)
+
+* add RowStatus checks when reading MIB tables (LCD)
+
+* Disallow empty SET value reaching scalar MIB object
